--- a/FrontEnd_Master/JSX_Method/public/index.html
+++ b/FrontEnd_Master/JSX_Method/public/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <div id="root">not rendered</div>
-  <script src="https://unpkg.com/react@18.2.0/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
-  <script src="../src/App.js">
+  <script type="module" src="../src/App.jsx">
   </script>
     
 </body>
