--- a/FrontEnd_Master/JSX_Method/src/index.html
+++ b/FrontEnd_Master/JSX_Method/src/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me! V8</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="root">not rendered</div>
-  <script type="module" src="../src/App.jsx">
+  <script type="module" src="App.jsx">
   </script>
     
 </body>
