--- a/FrontEnd_Master/JSX_Method/src/index.html
+++ b/FrontEnd_Master/JSX_Method/src/index.html
@@ -6,8 +6,11 @@
     <title>About Me! V8</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body>  
     <div id="root">not rendered</div>
+    <div id="modal"></div>
+    <!-- separate mount point (the actual DOM node which your app is put into) for your React app -->
+  
   <script type="module" src="./App.jsx">
   </script>
     
